@@ -274,6 +274,7 @@ If a strike is determined to hit, it will always do at least 1 point of damage. 
         text= _"The time of day affects the damage of certain units as follows:
  Lawful units get +25% damage in daytime, and −25% damage at night.
  Chaotic units get +25% damage at night, and −25% in daytime.
+ Liminal units get +25% damage during twilight.
  Neutral units are unaffected by the time of day." + _"
 
 The current time of day can be observed under the minimap in the status pane. For the usual day/night cycle, Morning and Afternoon count as day, First and Second Watch count as night:
